<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pelada FC (beta)</string>
    <string name="action_settings">Settings</string>
    <string name="jog">Jogador</string>
    <string name="cad_jog">Cadastrar Jogador</string>
    <string name="sel_jog">Selecionar Jogador</string>
    <string name="sel_modalidade">Selecionar Modalidade</string>
    <string name="create_teams">Criar\\Sel. Times</string>
    <string name="start_game">Iniciar Partida</string>
    <string name="nome">Nome</string>
    <string name="apelido">Apelido</string>
    <string name="classificacao">Classificação</string>
    <string name="gravar">Gravar</string>
    <string name="iniciar_partida">Iniciar Partida</string>
    <string name="iniciar">Iniciar</string>
    <string name="parar_partida">Parar</string>
    <string name="pausar_partida">Pausar</string>
    <string name="zero">0</string>
    <string name="versus">  X  </string>
    <string name="gol">Gol!</string>
    <string name="classificar_jogadores">Classificar Jogadores</string>
    <string name="detalhes_dos_times">Jogadores de cada time:</string>
    <string name="times_criados">Times que foram criados pelo sorteio:</string>
    

    <string-array name="jogadores_array">
        <item>Andre Firmo</item>
        <item>Graciela</item>
        <item>Luiz</item>
        <item>Wesley</item>
        <item>Flausino</item>
        <item>Miralles</item>
        <item>Neymar</item>
        <item>Pelé</item>
        <item>Rodolfo Rogrigues</item>
    </string-array>

    <string name="title_activity_selecionar_modalidade">SelecionarModalidadeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_criar_times">CriarTimesActivity</string>
    <string name="title_activity_partida">PartidaActivity</string>
    <string name="comecar">Começar</string>
    <string name="parar">Parar</string>
    <string name="title_activity_classificar_jogadores">ClassificarJogadoresActivity</string>

</resources>
