<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastrarJogadorActivity" >

    <EditText
        android:id="@+id/nomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text|textCapWords" >

        <requestFocus />
    </EditText>

    <RatingBar
        android:id="@+id/classificacaoBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/apelidoText"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="17dp"
        android:rating="3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/classificacaoBar"
        android:layout_below="@+id/apelidoText"
        android:layout_marginTop="38dp"
        android:text="@string/classificacao"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/apelidoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nomeText"
        android:layout_below="@+id/nomeText"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/apelido"
        android:inputType="text|textCapWords" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/classificacaoBar"
        android:layout_below="@+id/classificacaoBar"
        android:layout_marginTop="38dp"
        android:onClick="gravarJogador"
        android:text="@string/gravar" />

</RelativeLayout>